feat: 로그인 및 회원추가 수정 개발

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>관리자 로그인</title>
+        <title>매물다오 로그인</title>
         <link rel="stylesheet" th:href="@{/css/styles.css}">
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -19,9 +19,11 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-5 mb-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header" style="background-color: #e5e5e5 !important; align-items: center; display: flex; justify-content: center; flex-direction: column;">
-                                        <h4 class="text-center font-weight-light my-4" style="color: #1e2125">관리자 페이지</h4>
-                                    </div>
+                                    <img src="/loginLogo.png">
+<!--                                    <div class="card-header" style="background-color: #e5e5e5 !important; align-items: center; display: flex; justify-content: center; flex-direction: column;">-->
+<!--                                        -->
+<!--                                        <h4 class="text-center font-weight-light my-4" style="color: #1e2125">매물다오</h4>-->
+<!--                                    </div>-->
                                     <div class="card-body">
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="id" type="text" placeholder="user" />
