--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>관리자 목록</title>
+        <title>근무자 목록</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" th:href="@{/css/styles.css}">
@@ -46,7 +46,7 @@
                             <div class="card-header" style="display: flex; justify-content: space-between;  align-items: center;">
                                 <div>
                                     <i class="fas fa-table me-1"></i>
-                                    관리자 목록
+                                    근무자 목록
                                 </div>
 
                                     <button class="btn btn-primary mx-lg-1 btn-sm" id="addMemberButton">추가</button>
@@ -67,37 +67,38 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h6 class="modal-title" id="addModalLabel">관리자 추가</h6>
+                                <h6 class="modal-title" id="addModalLabel">근무자 추가</h6>
                             </div>
                             <div class="modal-body">
                                 <div class="form-group">
-                                    <label for="addMemberAccountName">아이디:</label>
-                                    <input type="text" class="form-control mb-3" id="addMemberAccountName">
-
-                                    <label for="addMemberPassword">비밀번호:</label>
-                                    <input type="password" class="form-control mb-3" id="addMemberPassword">
-
                                     <label for="addMemberName">이름:</label>
                                     <input type="text" class="form-control mb-3" id="addMemberName">
 
                                     <label for="addMemberPhone">연락처:</label>
                                     <input type="text" class="form-control mb-3" id="addMemberPhone" placeholder="'-' 없이 입력해주세요. ex)01033331111">
 
-                                    <label for="addMemberGender">성별:</label>
+                                    <label for="addMemberPhone">성별:</label>
                                     <select class="form-control mb-3" id="addMemberGender">
                                         <option value="기타">기타</option>
                                         <option value="남성">남성</option>
                                         <option value="여성">여성</option>
                                     </select>
 
-                                    <label for="addMemberBirthDate">생년월일:</label>
+                                    <label for="addMemberPhone">생년월일:</label>
                                     <input type="date" class="form-control mb-3" id="addMemberBirthDate">
 
-                                    <label for="addMemberAddress">주소:</label>
+                                    <label for="addMemberPhone">주소:</label>
                                     <input type="text" class="form-control mb-3" id="addMemberAddress">
 
                                     <label for="addMemberKakaoUserKey">개인코드:</label>
                                     <input type="text" class="form-control mb-3" id="addMemberKakaoUserKey">
+
+                                    <label for="addMemberGroupName">소속:</label>
+                                    <input type="text" class="form-control mb-3" id="addMemberGroupName">
+
+                                    <label for="addMemberBoardPoint">버스 탑승지:</label>
+                                    <select class="form-control mb-3" id="addMemberBoardPoint">
+                                    </select>
                                 </div>
                                 <div class="d-flex align-items-center justify-content-center mt-4 mb-0 gap-3">
                                     <button type="button" id="addMember" class="btn btn-primary">추가</button>
@@ -109,43 +110,44 @@
                     </div>
                 </div>
 
-                <!-- 추가 모달 -->
                 <div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="updateModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h6 class="modal-title" id="updateModalLabel">관리자 정보</h6>
+                                <h6 class="modal-title" id="updateModalLabel">근무자 정보</h6>
                             </div>
                             <div class="modal-body">
                                 <div class="form-group">
                                     <input type="hidden" class="form-control mb-3" id="updateMemberId">
-                                    <label for="updateMemberAccountName">아이디:</label>
-                                    <input type="text" class="form-control mb-3" id="updateMemberAccountName">
-
-                                    <label for="updateMemberPassword">비밀번호:</label>
-                                    <input type="password" class="form-control mb-3" id="updateMemberPassword" placeholder="입력하지 않으면 비밀번호 유지">
-
-                                    <label for="updateMemberName">이름:</label>
+                                    <label for="addMemberName">이름:</label>
                                     <input type="text" class="form-control mb-3" id="updateMemberName">
 
-                                    <label for="updateMemberPhone">연락처:</label>
+                                    <label for="addMemberPhone">연락처:</label>
                                     <input type="text" class="form-control mb-3" id="updateMemberPhone" placeholder="'-' 없이 입력해주세요. ex)01033331111">
 
-                                    <label for="updateMemberGender">성별:</label>
+                                    <label for="addMemberPhone">성별:</label>
                                     <select class="form-control mb-3" id="updateMemberGender">
                                         <option value="기타">기타</option>
                                         <option value="남성">남성</option>
                                         <option value="여성">여성</option>
                                     </select>
 
-                                    <label for="updateMemberBirthDate">생년월일:</label>
+                                    <label for="addMemberPhone">생년월일:</label>
                                     <input type="date" class="form-control mb-3" id="updateMemberBirthDate">
 
-                                    <label for="updateMemberAddress">주소:</label>
+                                    <label for="addMemberPhone">주소:</label>
                                     <input type="text" class="form-control mb-3" id="updateMemberAddress">
 
                                     <label for="addMemberKakaoUserKey">개인코드:</label>
                                     <input type="text" class="form-control mb-3" id="updateMemberKakaoUserKey">
+
+                                    <label for="updateMemberGroupName">소속:</label>
+                                    <input type="text" class="form-control mb-3" id="updateMemberGroupName">
+
+                                    <label for="updateMemberBoardPoint">버스 탑승지:</label>
+                                    <select class="form-control mb-3" id="updateMemberBoardPoint">
+                                    </select>
+
                                 </div>
                                 <div class="d-flex align-items-center justify-content-center mt-4 mb-0 gap-3">
                                     <button type="button" id="updateMember" class="btn btn-primary">수정</button>
@@ -156,7 +158,6 @@
                         </div>
                     </div>
                 </div>
-
                 <th:block th:replace="fragments/footer :: footer"></th:block>
             </div>
 
@@ -164,6 +165,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
-        <script th:src="@{/js/view/manager/manager.js}"></script>
+        <script th:src="@{/js/view/board/board.js}"></script>
     </body>
 </html>
