--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <footer class="py-4 bg-light mt-auto">
     <div class="container-fluid px-4">
         <div class="d-flex align-items-center justify-content-between smal" style="flex-direction: column-reverse;">
-            <div class="text-muted">Copyright 2024 &copy; 근무</div>
+            <div class="text-muted">Copyright 2024 &copy; 매물다오</div>
         </div>
     </div>
 </footer>
