--- a/src/main/resources/templates/member.html
+++ b/src/main/resources/templates/member.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>근무자 목록</title>
+        <title>매물다오-회원관리</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" th:href="@{/css/styles.css}">
@@ -46,7 +46,7 @@
                             <div class="card-header" style="display: flex; justify-content: space-between;  align-items: center;">
                                 <div>
                                     <i class="fas fa-table me-1"></i>
-                                    근무자 목록
+                                    회원관리
                                 </div>
 
                                     <button class="btn btn-primary mx-lg-1 btn-sm" id="addMemberButton">추가</button>
@@ -67,38 +67,44 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h6 class="modal-title" id="addModalLabel">근무자 추가</h6>
+                                <h6 class="modal-title" id="addModalLabel">회원추가</h6>
                             </div>
                             <div class="modal-body">
                                 <div class="form-group">
+                                    <label for="addMemberId">ID:</label>
+                                    <input type="text" class="form-control mb-3" id="addMemberId">
+
+                                    <label for="addMemberPassword">비밀번호:</label>
+                                    <input type="password" class="form-control mb-3" id="addMemberPassword">
+
                                     <label for="addMemberName">이름:</label>
                                     <input type="text" class="form-control mb-3" id="addMemberName">
 
                                     <label for="addMemberPhone">연락처:</label>
                                     <input type="text" class="form-control mb-3" id="addMemberPhone" placeholder="'-' 없이 입력해주세요. ex)01033331111">
 
-                                    <label for="addMemberPhone">성별:</label>
-                                    <select class="form-control mb-3" id="addMemberGender">
-                                        <option value="기타">기타</option>
-                                        <option value="남성">남성</option>
-                                        <option value="여성">여성</option>
-                                    </select>
+<!--                                    <label for="addMemberPhone">성별:</label>-->
+<!--                                    <select class="form-control mb-3" id="addMemberGender">-->
+<!--                                        <option value="기타">기타</option>-->
+<!--                                        <option value="남성">남성</option>-->
+<!--                                        <option value="여성">여성</option>-->
+<!--                                    </select>-->
 
-                                    <label for="addMemberPhone">생년월일:</label>
-                                    <input type="date" class="form-control mb-3" id="addMemberBirthDate">
+<!--                                    <label for="addMemberPhone">생년월일:</label>-->
+<!--                                    <input type="date" class="form-control mb-3" id="addMemberBirthDate">-->
 
-                                    <label for="addMemberPhone">주소:</label>
-                                    <input type="text" class="form-control mb-3" id="addMemberAddress">
+<!--                                    <label for="addMemberPhone">주소:</label>-->
+<!--                                    <input type="text" class="form-control mb-3" id="addMemberAddress">-->
 
-                                    <label for="addMemberKakaoUserKey">개인코드:</label>
-                                    <input type="text" class="form-control mb-3" id="addMemberKakaoUserKey">
+<!--                                    <label for="addMemberKakaoUserKey">개인코드:</label>-->
+<!--                                    <input type="text" class="form-control mb-3" id="addMemberKakaoUserKey">-->
 
-                                    <label for="addMemberGroupName">소속:</label>
-                                    <input type="text" class="form-control mb-3" id="addMemberGroupName">
+<!--                                    <label for="addMemberGroupName">소속:</label>-->
+<!--                                    <input type="text" class="form-control mb-3" id="addMemberGroupName">-->
 
-                                    <label for="addMemberBoardPoint">버스 탑승지:</label>
-                                    <select class="form-control mb-3" id="addMemberBoardPoint">
-                                    </select>
+<!--                                    <label for="addMemberBoardPoint">버스 탑승지:</label>-->
+<!--                                    <select class="form-control mb-3" id="addMemberBoardPoint">-->
+<!--                                    </select>-->
                                 </div>
                                 <div class="d-flex align-items-center justify-content-center mt-4 mb-0 gap-3">
                                     <button type="button" id="addMember" class="btn btn-primary">추가</button>
@@ -114,40 +120,21 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h6 class="modal-title" id="updateModalLabel">근무자 정보</h6>
+                                <h6 class="modal-title" id="updateModalLabel">회원수정</h6>
                             </div>
                             <div class="modal-body">
                                 <div class="form-group">
-                                    <input type="hidden" class="form-control mb-3" id="updateMemberId">
+                                    <label for="updateMemberId">ID:</label>
+                                    <input type="text" class="form-control mb-3" id="updateMemberId" readonly>
+
+                                    <label for="updateMemberPassword">비밀번호:</label>
+                                    <input type="password" class="form-control mb-3" id="updateMemberPassword"  placeholder="비밀번호 변경을 원할 때 입력">
+
                                     <label for="addMemberName">이름:</label>
                                     <input type="text" class="form-control mb-3" id="updateMemberName">
 
                                     <label for="addMemberPhone">연락처:</label>
                                     <input type="text" class="form-control mb-3" id="updateMemberPhone" placeholder="'-' 없이 입력해주세요. ex)01033331111">
-
-                                    <label for="addMemberPhone">성별:</label>
-                                    <select class="form-control mb-3" id="updateMemberGender">
-                                        <option value="기타">기타</option>
-                                        <option value="남성">남성</option>
-                                        <option value="여성">여성</option>
-                                    </select>
-
-                                    <label for="addMemberPhone">생년월일:</label>
-                                    <input type="date" class="form-control mb-3" id="updateMemberBirthDate">
-
-                                    <label for="addMemberPhone">주소:</label>
-                                    <input type="text" class="form-control mb-3" id="updateMemberAddress">
-
-                                    <label for="addMemberKakaoUserKey">개인코드:</label>
-                                    <input type="text" class="form-control mb-3" id="updateMemberKakaoUserKey">
-
-                                    <label for="updateMemberGroupName">소속:</label>
-                                    <input type="text" class="form-control mb-3" id="updateMemberGroupName">
-
-                                    <label for="updateMemberBoardPoint">버스 탑승지:</label>
-                                    <select class="form-control mb-3" id="updateMemberBoardPoint">
-                                    </select>
-
                                 </div>
                                 <div class="d-flex align-items-center justify-content-center mt-4 mb-0 gap-3">
                                     <button type="button" id="updateMember" class="btn btn-primary">수정</button>
