--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <nav th:fragment="header" class="sb-topnav navbar navbar-expand navbar-light  bg-light">
     <!-- Navbar Brand-->
-    <a class="navbar-brand " href="/board">
+    <a class="navbar-brand " href="/product">
         <div style="text-align: center">매물다오</div>
     </a>
     <!-- Sidebar Toggle-->
