--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>근무자 목록</title>
+        <title>매물다오-매물등록</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" th:href="@{/css/styles.css}">
@@ -46,10 +46,10 @@
                             <div class="card-header" style="display: flex; justify-content: space-between;  align-items: center;">
                                 <div>
                                     <i class="fas fa-table me-1"></i>
-                                    근무자 목록
+                                    매물등록
                                 </div>
 
-                                    <button class="btn btn-primary mx-lg-1 btn-sm" id="addMemberButton">추가</button>
+                                    <button class="btn btn-primary mx-lg-1 btn-sm" id="addProductModalButton">등록</button>
                             </div>
                             <div class="card-body" style="font-size: 10px">
                                 <div class="datatable-container">
@@ -67,41 +67,24 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h6 class="modal-title" id="addModalLabel">근무자 추가</h6>
+                                <h6 class="modal-title" id="addModalLabel">매물등록</h6>
                             </div>
                             <div class="modal-body">
                                 <div class="form-group">
-                                    <label for="addMemberName">이름:</label>
-                                    <input type="text" class="form-control mb-3" id="addMemberName">
+                                    <label for="addProductImageUrl">이미지 URL:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductImageUrl" placeholder="(필수) 이미지 URL을 입력하세요.">
 
-                                    <label for="addMemberPhone">연락처:</label>
-                                    <input type="text" class="form-control mb-3" id="addMemberPhone" placeholder="'-' 없이 입력해주세요. ex)01033331111">
+                                    <label for="addProductTitle">제목:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductTitle" placeholder="제목을 입력하세요.">
 
-                                    <label for="addMemberPhone">성별:</label>
-                                    <select class="form-control mb-3" id="addMemberGender">
-                                        <option value="기타">기타</option>
-                                        <option value="남성">남성</option>
-                                        <option value="여성">여성</option>
-                                    </select>
+                                    <label for="addProductDescription">설명:</label>
+                                    <textarea class="form-control mb-3 fixed-textarea" id="addProductDescription" rows="3" placeholder="(필수) 상품 설명을 입력하세요. 최대 230자 "></textarea>
 
-                                    <label for="addMemberPhone">생년월일:</label>
-                                    <input type="date" class="form-control mb-3" id="addMemberBirthDate">
-
-                                    <label for="addMemberPhone">주소:</label>
-                                    <input type="text" class="form-control mb-3" id="addMemberAddress">
-
-                                    <label for="addMemberKakaoUserKey">개인코드:</label>
-                                    <input type="text" class="form-control mb-3" id="addMemberKakaoUserKey">
-
-                                    <label for="addMemberGroupName">소속:</label>
-                                    <input type="text" class="form-control mb-3" id="addMemberGroupName">
-
-                                    <label for="addMemberBoardPoint">버스 탑승지:</label>
-                                    <select class="form-control mb-3" id="addMemberBoardPoint">
-                                    </select>
+                                    <label for="addProductLink">링크:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductLink" placeholder="링크를 입력하세요.">
                                 </div>
                                 <div class="d-flex align-items-center justify-content-center mt-4 mb-0 gap-3">
-                                    <button type="button" id="addMember" class="btn btn-primary">추가</button>
+                                    <button type="button" id="addProductButton" class="btn btn-primary">등록</button>
                                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">취소</button>
                                 </div>
                             </div>
@@ -165,6 +148,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
-        <script th:src="@{/js/view/board/board.js}"></script>
+        <script th:src="@{/js/view/product/product.js}"></script>
     </body>
 </html>
