feat: 상품 수정 추가

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -72,13 +72,13 @@
                             <div class="modal-body">
                                 <div class="form-group">
                                     <label for="addProductImageUrl">이미지 URL:</label>
-                                    <input type="text" class="form-control mb-3" id="addProductImageUrl" placeholder="(필수) 이미지 URL을 입력하세요.">
+                                    <input type="text" class="form-control mb-3" id="addProductImageUrl" placeholder="이미지 URL을 입력하세요.">
 
                                     <label for="addProductTitle">제목:</label>
                                     <input type="text" class="form-control mb-3" id="addProductTitle" placeholder="제목을 입력하세요.">
 
                                     <label for="addProductDescription">설명:</label>
-                                    <textarea class="form-control mb-3 fixed-textarea" id="addProductDescription" rows="3" placeholder="(필수) 상품 설명을 입력하세요. 최대 230자 "></textarea>
+                                    <textarea class="form-control mb-3 fixed-textarea" id="addProductDescription" rows="3" placeholder="상품 설명을 입력하세요. (최대 230자) "></textarea>
 
                                     <label for="addProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="addProductLink" placeholder="링크를 입력하세요.">
@@ -104,13 +104,13 @@
                                     <input type="hidden" id="updateProductId">
 
                                     <label for="updateProductImageUrl">이미지 URL:</label>
-                                    <input type="text" class="form-control mb-3" id="updateProductImageUrl" placeholder="(필수) 이미지 URL을 입력하세요.">
+                                    <input type="text" class="form-control mb-3" id="updateProductImageUrl" placeholder="이미지 URL을 입력하세요.">
 
                                     <label for="updateProductTitle">제목:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductTitle" placeholder="제목을 입력하세요.">
 
                                     <label for="updateProductDescription">설명:</label>
-                                    <textarea class="form-control mb-3 fixed-textarea" id="updateProductDescription" rows="3" placeholder="(필수) 상품 설명을 입력하세요. 최대 230자 "></textarea>
+                                    <textarea class="form-control mb-3 fixed-textarea" id="updateProductDescription" rows="3" placeholder="설명을 입력하세요. (최대 230자) "></textarea>
 
                                     <label for="updateProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductLink" placeholder="링크를 입력하세요.">
