feat: 입력 변경 진행중

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -77,8 +77,29 @@
                                     <label for="addProductTitle">제목:</label>
                                     <input type="text" class="form-control mb-3" id="addProductTitle" placeholder="제목을 입력하세요.">
 
-                                    <label for="addProductDescription">설명:</label>
-                                    <textarea class="form-control mb-3 fixed-textarea" id="addProductDescription" rows="3" placeholder="상품 설명을 입력하세요. (최대 230자) "></textarea>
+                                    <label for="addProductNo">타경번호:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductNo" placeholder="타경번호를 입력하세요.">
+
+                                    <label for="addProductCategory">물건종류:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductCategory" placeholder="물건종류를 입력하세요.">
+
+                                    <label for="addProductLocation">소재지:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductLocation" placeholder="소재지를 입력하세요.">
+
+                                    <label for="addProductPrice">감정가:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductPrice" placeholder="감정가를 입력하세요.">
+
+                                    <label for="addProductMinPrice">최저가:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductMinPrice" placeholder="최저가를 입력하세요.">
+
+                                    <label for="addProductExpectedPrice">예상 낙찰가:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductExpectedPrice" placeholder="예상 낙찰가를 입력하세요.">
+
+                                    <label for="addProductSaleDate">매각 기일:</label>
+                                    <input type="date" class="form-control mb-3" id="addProductSaleDate" placeholder="매각 기일을 선택하세요.">
+
+                                    <label for="addProductManagerName">담당자:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductManagerName" placeholder="담당자 이름을 입력하세요.">
 
                                     <label for="addProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="addProductLink" placeholder="링크를 입력하세요.">
