--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -130,8 +130,29 @@
                                     <label for="updateProductTitle">제목:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductTitle" placeholder="제목을 입력하세요.">
 
-                                    <label for="updateProductDescription">설명:</label>
-                                    <textarea class="form-control mb-3 fixed-textarea" id="updateProductDescription" rows="3" placeholder="설명을 입력하세요. (최대 230자) "></textarea>
+                                    <label for="addProductNo">타경번호:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductNo" placeholder="타경번호를 입력하세요.">
+
+                                    <label for="addProductCategory">물건종류:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductCategory" placeholder="물건종류를 입력하세요.">
+
+                                    <label for="addProductLocation">소재지:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductLocation" placeholder="소재지를 입력하세요.">
+
+                                    <label for="addProductPrice">감정가:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductPrice" placeholder="감정가를 입력하세요.">
+
+                                    <label for="addProductMinPrice">최저가:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductMinPrice" placeholder="최저가를 입력하세요.">
+
+                                    <label for="addProductExpectedPrice">예상 낙찰가:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductExpectedPrice" placeholder="예상 낙찰가를 입력하세요.">
+
+                                    <label for="addProductSaleDate">매각 기일:</label>
+                                    <input type="date" class="form-control mb-3" id="updateProductSaleDate" placeholder="매각 기일을 선택하세요.">
+
+                                    <label for="addProductManagerName">담당자:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductManagerName" placeholder="담당자 이름을 입력하세요.">
 
                                     <label for="updateProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductLink" placeholder="링크를 입력하세요.">
