feat: 제목 -> 메모 관리자 연락처 추가

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -74,8 +74,8 @@
                                     <label for="addProductImageUrl">이미지 URL:</label>
                                     <input type="text" class="form-control mb-3" id="addProductImageUrl" placeholder="이미지 URL을 입력하세요.">
 
-                                    <label for="addProductTitle">제목:</label>
-                                    <input type="text" class="form-control mb-3" id="addProductTitle" placeholder="제목을 입력하세요.">
+                                    <label for="addProductTitle">메모:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductTitle" placeholder="메모를 입력하세요.">
 
                                     <label for="addProductNo">타경번호:</label>
                                     <input type="text" class="form-control mb-3" id="addProductNo" placeholder="타경번호를 입력하세요.">
@@ -100,6 +100,9 @@
 
                                     <label for="addProductManagerName">담당자:</label>
                                     <input type="text" class="form-control mb-3" id="addProductManagerName" placeholder="담당자 이름을 입력하세요.">
+
+                                    <label for="addProductManagerName">담당자 연락처:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductManagerPhone" placeholder="01055557777">
 
                                     <label for="addProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="addProductLink" placeholder="링크를 입력하세요.">
@@ -127,8 +130,8 @@
                                     <label for="updateProductImageUrl">이미지 URL:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductImageUrl" placeholder="이미지 URL을 입력하세요.">
 
-                                    <label for="updateProductTitle">제목:</label>
-                                    <input type="text" class="form-control mb-3" id="updateProductTitle" placeholder="제목을 입력하세요.">
+                                    <label for="updateProductTitle">메모:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductTitle" placeholder="메모를 입력하세요.">
 
                                     <label for="addProductNo">타경번호:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductNo" placeholder="타경번호를 입력하세요.">
@@ -153,6 +156,9 @@
 
                                     <label for="addProductManagerName">담당자:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductManagerName" placeholder="담당자 이름을 입력하세요.">
+
+                                    <label for="addProductManagerName">담당자 연락처:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductManagerPhone" placeholder="01055557777">
 
                                     <label for="updateProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductLink" placeholder="링크를 입력하세요.">
