--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -49,7 +49,17 @@
                                     매물등록
                                 </div>
 
-                                    <button class="btn btn-primary mx-lg-1 btn-sm" id="addProductModalButton">등록</button>
+                                <button class="btn btn-primary mx-lg-1 btn-sm" id="addProductModalButton">등록</button>
+
+                            </div>
+                            <div class="card m-3 ">
+                                <div class="form-group d-flex align-items-center gap-2 mx-3">
+                                    <select class="form-select form-select-sm w-auto" id="categorySelect" required>
+                                        <option value="">카테고리 선택</option>
+                                    </select>
+                                    <input type="text" class="form-control form-control-sm w-auto" id="searchInput" placeholder="검색어를 입력하세요">
+                                    <button class="btn btn-dark m-3" id="searchButton" type="button">검색</button>
+                                </div>
                             </div>
                             <div class="card-body" style="font-size: 10px">
                                 <div class="datatable-container">
