feat: 현시세, 장단점 추가

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -84,8 +84,8 @@
                                     <label for="addProductImageUrl">이미지 URL:</label>
                                     <input type="text" class="form-control mb-3" id="addProductImageUrl" placeholder="이미지 URL을 입력하세요.">
 
-                                    <label for="addProductTitle">메모:</label>
-                                    <input type="text" class="form-control mb-3" id="addProductTitle" placeholder="메모를 입력하세요.">
+                                    <label for="addProductMemo">메모:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductMemo" placeholder="메모를 입력하세요.">
 
                                     <label for="addProductNo">타경번호:</label>
                                     <input type="text" class="form-control mb-3" id="addProductNo" placeholder="타경번호를 입력하세요.">
@@ -98,6 +98,9 @@
 
                                     <label for="addProductPrice">감정가:</label>
                                     <input type="text" class="form-control mb-3" id="addProductPrice" placeholder="감정가를 입력하세요.">
+
+                                    <label for="addProductCurrentPrice">현시세:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductCurrentPrice" placeholder="현시세를 입력하세요.">
 
                                     <label for="addProductMinPrice">최저가:</label>
                                     <input type="text" class="form-control mb-3" id="addProductMinPrice" placeholder="최저가를 입력하세요.">
@@ -113,6 +116,9 @@
 
                                     <label for="addProductManagerName">담당자 연락처:</label>
                                     <input type="text" class="form-control mb-3" id="addProductManagerPhone" placeholder="01055557777">
+
+                                    <label for="addProductDescription">장단점:</label>
+                                    <input type="text" class="form-control mb-3" id="addProductDescription" placeholder="장단점을 입력하세요.">
 
                                     <label for="addProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="addProductLink" placeholder="링크를 입력하세요.">
@@ -140,8 +146,8 @@
                                     <label for="updateProductImageUrl">이미지 URL:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductImageUrl" placeholder="이미지 URL을 입력하세요.">
 
-                                    <label for="updateProductTitle">메모:</label>
-                                    <input type="text" class="form-control mb-3" id="updateProductTitle" placeholder="메모를 입력하세요.">
+                                    <label for="updateProductMemo">메모:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductMemo" placeholder="메모를 입력하세요.">
 
                                     <label for="addProductNo">타경번호:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductNo" placeholder="타경번호를 입력하세요.">
@@ -154,6 +160,9 @@
 
                                     <label for="addProductPrice">감정가:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductPrice" placeholder="감정가를 입력하세요.">
+
+                                    <label for="updateProductCurrentPrice">현시세:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductCurrentPrice" placeholder="현시세를 입력하세요.">
 
                                     <label for="addProductMinPrice">최저가:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductMinPrice" placeholder="최저가를 입력하세요.">
@@ -169,6 +178,9 @@
 
                                     <label for="addProductManagerName">담당자 연락처:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductManagerPhone" placeholder="01055557777">
+
+                                    <label for="updateProductDescription">장단점:</label>
+                                    <input type="text" class="form-control mb-3" id="updateProductDescription" placeholder="장단점을 입력하세요.">
 
                                     <label for="updateProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductLink" placeholder="링크를 입력하세요.">
