feat: 누출 날짜 추가 및 스케줄 상태변경

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -122,6 +122,9 @@
 
                                     <label for="addProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="addProductLink" placeholder="링크를 입력하세요.">
+
+                                    <label for="addProductDisplayDate">노출 날짜:</label>
+                                    <input type="date" class="form-control mb-3" id="addProductDisplayDate" placeholder="노출 날짜를 선택하세요.">
                                 </div>
                                 <div class="d-flex align-items-center justify-content-center mt-4 mb-0 gap-3">
                                     <button type="button" id="addProductButton" class="btn btn-primary">등록</button>
@@ -184,6 +187,9 @@
 
                                     <label for="updateProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductLink" placeholder="링크를 입력하세요.">
+
+                                    <label for="updateProductDisplayDate">노출 날짜:</label>
+                                    <input type="date" class="form-control mb-3" id="updateProductDisplayDate" placeholder="노출 날짜를 선택하세요.">
 
                                     <label for="updateProductMemberId">작성자:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductMemberId" readonly>
