feat: 누출 날짜 추가 및 스케줄 상태변경

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -118,7 +118,7 @@
                                     <input type="text" class="form-control mb-3" id="addProductManagerPhone" placeholder="01055557777">
 
                                     <label for="addProductDescription">장단점:</label>
-                                    <input type="text" class="form-control mb-3" id="addProductDescription" placeholder="장단점을 입력하세요.">
+                                    <textarea class="form-control mb-3" id="addProductDescription" placeholder="장단점을 입력하세요."></textarea>
 
                                     <label for="addProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="addProductLink" placeholder="링크를 입력하세요.">
@@ -183,7 +183,8 @@
                                     <input type="text" class="form-control mb-3" id="updateProductManagerPhone" placeholder="01055557777">
 
                                     <label for="updateProductDescription">장단점:</label>
-                                    <input type="text" class="form-control mb-3" id="updateProductDescription" placeholder="장단점을 입력하세요.">
+                                    <textarea class="form-control mb-3" id="updateProductDescription" placeholder="장단점을 입력하세요." style="height: 150px; resize: none;"></textarea>
+
 
                                     <label for="updateProductLink">링크:</label>
                                     <input type="text" class="form-control mb-3" id="updateProductLink" placeholder="링크를 입력하세요.">
